[workspace]
members = [
  "program",
  "script",
]
resolver = "2"

[workspace.dependencies]
bitcode = "0.6"
clap = "*"
ecies = { path = ".." }
toml = "*"
tracing = "*"

openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-circuit = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-sdk = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-k256 = { git = "https://github.com/openvm-org/openvm.git", package = "k256", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", features = ["std"] }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97", default-features = false }
openvm-benchmarks-prove = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }

openvm-stark-sdk = { git = "https://github.com/openvm-org/stark-backend.git", rev = "cd39ed46e424db131cd3cd5cc50660af850cdf8d" }

[patch.crates-io]
k256 = { git = "https://github.com/openvm-org/openvm.git", rev = "51d0aa69694fd33def3c433e48228a5675e4fd97" }
